; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_qp.c_hinic_set_tso_inner_l4.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_qp.c_hinic_set_tso_inner_l4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hinic_sq_task = type { i32, i32, i32 }

@TCP_OFFLOAD_ENABLE = common dso_local global i32 0, align 4
@UDP_OFFLOAD_ENABLE = common dso_local global i32 0, align 4
@L4_OFFLOAD = common dso_local global i32 0, align 4
@TSO_FLAG = common dso_local global i32 0, align 4
@INNER_L4LEN = common dso_local global i32 0, align 4
@QUEUE_INFO_PLDOFF = common dso_local global i32 0, align 4
@QUEUE_INFO_TSO = common dso_local global i32 0, align 4
@QUEUE_INFO_UFO = common dso_local global i32 0, align 4
@QUEUE_INFO_TCPUDP_CS = common dso_local global i32 0, align 4
@QUEUE_INFO_MSS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hinic_set_tso_inner_l4(%struct.hinic_sq_task* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.hinic_sq_task*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.hinic_sq_task* %0, %struct.hinic_sq_task** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  store i32 0, i32* %15, align 4
  store i32 0, i32* %16, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* @TCP_OFFLOAD_ENABLE, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %7
  store i32 1, i32* %15, align 4
  br label %27

21:                                               ; preds = %7
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* @UDP_OFFLOAD_ENABLE, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %21
  store i32 1, i32* %16, align 4
  br label %26

26:                                               ; preds = %25, %21
  br label %27

27:                                               ; preds = %26, %20
  %28 = load i32, i32* %13, align 4
  %29 = load %struct.hinic_sq_task*, %struct.hinic_sq_task** %8, align 8
  %30 = getelementptr inbounds %struct.hinic_sq_task, %struct.hinic_sq_task* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* %10, align 4
  %32 = load i32, i32* @L4_OFFLOAD, align 4
  %33 = call i32 @HINIC_SQ_TASK_INFO0_SET(i32 %31, i32 %32)
  %34 = load %struct.hinic_sq_task*, %struct.hinic_sq_task** %8, align 8
  %35 = getelementptr inbounds %struct.hinic_sq_task, %struct.hinic_sq_task* %34, i32 0, i32 2
  %36 = load i32, i32* %35, align 4
  %37 = or i32 %36, %33
  store i32 %37, i32* %35, align 4
  %38 = load i32, i32* %15, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %43, label %40

40:                                               ; preds = %27
  %41 = load i32, i32* %16, align 4
  %42 = icmp ne i32 %41, 0
  br label %43

43:                                               ; preds = %40, %27
  %44 = phi i1 [ true, %27 ], [ %42, %40 ]
  %45 = zext i1 %44 to i32
  %46 = load i32, i32* @TSO_FLAG, align 4
  %47 = call i32 @HINIC_SQ_TASK_INFO0_SET(i32 %45, i32 %46)
  %48 = load %struct.hinic_sq_task*, %struct.hinic_sq_task** %8, align 8
  %49 = getelementptr inbounds %struct.hinic_sq_task, %struct.hinic_sq_task* %48, i32 0, i32 2
  %50 = load i32, i32* %49, align 4
  %51 = or i32 %50, %47
  store i32 %51, i32* %49, align 4
  %52 = load i32, i32* %11, align 4
  %53 = load i32, i32* @INNER_L4LEN, align 4
  %54 = call i32 @HINIC_SQ_TASK_INFO1_SET(i32 %52, i32 %53)
  %55 = load %struct.hinic_sq_task*, %struct.hinic_sq_task** %8, align 8
  %56 = getelementptr inbounds %struct.hinic_sq_task, %struct.hinic_sq_task* %55, i32 0, i32 1
  %57 = load i32, i32* %56, align 4
  %58 = or i32 %57, %54
  store i32 %58, i32* %56, align 4
  %59 = load i32, i32* %12, align 4
  %60 = load i32, i32* @QUEUE_INFO_PLDOFF, align 4
  %61 = call i32 @HINIC_SQ_CTRL_SET(i32 %59, i32 %60)
  %62 = load i32, i32* %15, align 4
  %63 = load i32, i32* @QUEUE_INFO_TSO, align 4
  %64 = call i32 @HINIC_SQ_CTRL_SET(i32 %62, i32 %63)
  %65 = or i32 %61, %64
  %66 = load i32, i32* %16, align 4
  %67 = load i32, i32* @QUEUE_INFO_UFO, align 4
  %68 = call i32 @HINIC_SQ_CTRL_SET(i32 %66, i32 %67)
  %69 = or i32 %65, %68
  %70 = load i32, i32* %10, align 4
  %71 = icmp ne i32 %70, 0
  %72 = xor i1 %71, true
  %73 = xor i1 %72, true
  %74 = zext i1 %73 to i32
  %75 = load i32, i32* @QUEUE_INFO_TCPUDP_CS, align 4
  %76 = call i32 @HINIC_SQ_CTRL_SET(i32 %74, i32 %75)
  %77 = or i32 %69, %76
  %78 = load i32*, i32** %9, align 8
  %79 = load i32, i32* %78, align 4
  %80 = or i32 %79, %77
  store i32 %80, i32* %78, align 4
  %81 = load i32*, i32** %9, align 8
  %82 = load i32, i32* %81, align 4
  %83 = load i32, i32* @QUEUE_INFO_MSS, align 4
  %84 = call i32 @HINIC_SQ_CTRL_CLEAR(i32 %82, i32 %83)
  %85 = load i32*, i32** %9, align 8
  store i32 %84, i32* %85, align 4
  %86 = load i32, i32* %14, align 4
  %87 = load i32, i32* @QUEUE_INFO_MSS, align 4
  %88 = call i32 @HINIC_SQ_CTRL_SET(i32 %86, i32 %87)
  %89 = load i32*, i32** %9, align 8
  %90 = load i32, i32* %89, align 4
  %91 = or i32 %90, %88
  store i32 %91, i32* %89, align 4
  ret void
}

declare dso_local i32 @HINIC_SQ_TASK_INFO0_SET(i32, i32) #1

declare dso_local i32 @HINIC_SQ_TASK_INFO1_SET(i32, i32) #1

declare dso_local i32 @HINIC_SQ_CTRL_SET(i32, i32) #1

declare dso_local i32 @HINIC_SQ_CTRL_CLEAR(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
